# ferrisbox

./: .eslintrc.json  .gitignore  AGENTS.md  GETTING_STARTED.md  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: release.yml  test.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  converters.rs  diff.rs  encoders.rs  formatters.rs  generators.rs  graphics.rs  mod.rs  network.rs  storage.rs  utilities.rs
src-tauri/src/storage/: config.rs
src-tauri/src/tools/: mod.rs
src-tauri/src/tools/converters/: case.rs  color.rs  cron.rs  csv_json.rs  json_yaml.rs  markdown_html.rs  mod.rs  number_base.rs  timestamp.rs  units.rs
src-tauri/src/tools/diff/: mod.rs  text_diff.rs
src-tauri/src/tools/encoders/: base64.rs  hex.rs  html.rs  image.rs  mod.rs  morse.rs  punycode.rs  url.rs
src-tauri/src/tools/formatters/: css.rs  javascript.rs  json.rs  mod.rs  rustfmt.rs  sql.rs  xml.rs  yaml.rs
src-tauri/src/tools/generators/: bcrypt.rs  git_branch.rs  gitignore.rs  hash.rs  hmac.rs  lorem.rs  mod.rs  password.rs  qrcode.rs  rsa.rs  uuid.rs
src-tauri/src/tools/graphics/: base64_previewer.rs  contrast_checker.rs  favicon_generator.rs  image_compressor.rs  mod.rs  svg_optimizer.rs
src-tauri/src/tools/network/: dns_lookup.rs  ip_info.rs  mod.rs  port_scanner.rs
src-tauri/src/tools/utilities/: compression.rs  jwt.rs  mod.rs  regex.rs  url_parser.rs
src-tauri/src/utils/: detector.rs
src/components/common/: CommandPalette.css  CommandPalette.tsx  SmartPasteButton.tsx
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/components/tools/: AsciiArtGenerator.tsx  Base64Encoder.tsx  Base64Image.tsx  Base64ImagePreviewer.tsx  BcryptTester.tsx  CaseConverter.tsx  ColorPicker.tsx  ContrastChecker.tsx  CronParser.tsx  CssFormatter.tsx  CsvToJsonConverter.tsx  CurlToCode.tsx  DnsLookup.tsx  FaviconGenerator.tsx  GitBranchNameGenerator.tsx  GitignoreGenerator.tsx  GzipCompressor.tsx  HashGenerator.tsx  HexConverter.tsx  HmacGenerator.tsx  HtmlEntities.tsx  HttpStatusCodes.tsx  ImageCompressor.tsx  IpInfo.tsx  JsFormatter.tsx  JsonFormatter.tsx  (+26 more)
src/contexts/: FavoritesContext.tsx  LanguageContext.tsx  ThemeContext.tsx
src/lib/: i18n.ts  tools-registry.ts
src/locales/: en.json  es.json  index.ts  pt.json  zh.json
src/styles/: globals.css
src/types/: index.ts
