[package]
name = "ferrisbox"
version = "0.1.0"
description = "The Developer's Swiss Army Knife"
authors = ["FerrisBox Team"]
edition = "2021"

[lib]
name = "ferrisbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
rayon = "1.10"
regex = "1.10"
once_cell = "1.19"
dirs = "5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
percent-encoding = "2.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

