[package]
name = "ferrisbox"
version = "0.1.0"
description = "The Developer's Swiss Army Knife"
authors = ["FerrisBox Team"]
edition = "2021"

[lib]
name = "ferrisbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
rayon = "1.10"
regex = "1.10"
once_cell = "1.19"
dirs = "5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.11", features = ["v1", "v4", "v7", "serde"] }
percent-encoding = "2.3"
# GRUPO 1: Encoders básicos
html-escape = "0.2"
# GRUPO 2: Herramientas avanzadas
jsonwebtoken = "9"
flate2 = "1.0"
idna = "0.5"
# GRUPO 4: URL Parser
url = "2.5"
urlencoding = "2.1"
# FORMATTERS: XML, SQL, CSS, YAML, etc.
quick-xml = "0.36"
sqlformat = "0.2"
serde_yaml = "0.9"
lightningcss = { version = "1.0.0-alpha.57", features = ["visitor"] }
tempfile = "3.10"
# GENERATORS: Password, HMAC, QR Code, etc.
rand = "0.8"
qrcode = "0.14"
sha1 = "0.10"
hmac = "0.12"
bcrypt = "0.16"
rsa = "0.9"
hex = "0.4"
# For RSA
base64ct = "1.6"
digest = "0.10"
pkcs8 = "0.10"
# For QR Code PNG generation
image = "0.25"

# CONVERTERS: New converter tools
csv = "1.4"
colorsys = "0.7"
chrono = "0.4"
pulldown-cmark = "0.12"
cron = "0.12"
diff = "0.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

